--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="bg-purple-900 text-white py-10 font-sans px-4 md:px-8">
+<footer class="bg-violet-900 text-white py-10 font-sans px-4 md:px-8">
   <div class="container mx-auto py-8">
     <div
       class="flex flex-col md:flex-row justify-between items-center text-center md:text-left"
@@ -6,7 +6,7 @@
       <div class="flex items-center mb-6 md:mb-0">
         <img
           alt="Company Logo"
-          class="mr-4 w-28 h-12"
+          class="mr-4 w-[9rem] h-14"
           src="/images/logo/skynux-logo.png"
         />
         <div>
@@ -81,7 +81,7 @@
       class="flex flex-col md:flex-row justify-between items-center text-center md:text-left"
     >
       <p class="text-sm mb-4 md:mb-0">
-        © 2025 HalloTech Solutions. All rights reserved.
+        © 2025 Skynux. All rights reserved.
       </p>
       <div class="flex items-center">
         <span class="mr-2">Follow Us</span>
