--- a/public/output.css
+++ b/public/output.css
@@ -150,17 +150,17 @@
     --color-violet-800: oklch(0.432 0.232 292.759);
     --color-violet-900: oklch(0.38 0.189 293.745);
     --color-violet-950: oklch(0.283 0.141 291.089);
-    --color-purple-50: oklch(0.977 0.014 308.299);
-    --color-purple-100: oklch(0.946 0.033 307.174);
-    --color-purple-200: oklch(0.902 0.063 306.703);
-    --color-purple-300: oklch(0.827 0.119 306.383);
-    --color-purple-400: oklch(0.714 0.203 305.504);
-    --color-purple-500: oklch(0.627 0.265 303.9);
-    --color-purple-600: oklch(0.558 0.288 302.321);
-    --color-purple-700: oklch(0.496 0.265 301.924);
-    --color-purple-800: oklch(0.438 0.218 303.724);
-    --color-purple-900: oklch(0.381 0.176 304.987);
-    --color-purple-950: oklch(0.291 0.149 302.717);
+    --color-violet-50: oklch(0.977 0.014 308.299);
+    --color-violet-100: oklch(0.946 0.033 307.174);
+    --color-violet-200: oklch(0.902 0.063 306.703);
+    --color-violet-300: oklch(0.827 0.119 306.383);
+    --color-violet-400: oklch(0.714 0.203 305.504);
+    --color-violet-500: oklch(0.627 0.265 303.9);
+    --color-violet-600: oklch(0.558 0.288 302.321);
+    --color-violet-700: oklch(0.496 0.265 301.924);
+    --color-violet-800: oklch(0.438 0.218 303.724);
+    --color-violet-900: oklch(0.381 0.176 304.987);
+    --color-violet-950: oklch(0.291 0.149 302.717);
     --color-fuchsia-50: oklch(0.977 0.017 320.058);
     --color-fuchsia-100: oklch(0.952 0.037 318.852);
     --color-fuchsia-200: oklch(0.903 0.076 319.62);
