--- a/views/components/hero.ejs
+++ b/views/components/hero.ejs
@@ -41,13 +41,14 @@
       <div class="relative z-10 text-left mx-auto px-4">
         <h1 class="text-5xl text-stone-50 md:text-6xl font-bold mb-6">
           Empower Your<br />Software Journey.
+          <span class="text-xl"> <br>The Future of IT Freelancing.</span>
         </h1>
         <p class="text-lg text-white md:text-xl mb-8">
-          Join a thriving community of IT professionals. Build teams, share
-          ideas, and collaborate on exciting projects.
+          Join a thriving community of IT professionals. Build teams, collaborate on projects,
+           and grow your freelancing career like never before.
         </p>
         <button
-          class="bg-purple-950 text-white py-1.5 px-6 rounded-full text-md font-light hover:bg-purple-800 transition duration-300"
+          class="bg-violet-800 text-white py-1.5 px-6 rounded-full text-md font-light hover:bg-violet-900 transition duration-300"
         >
           Request Access
         </button>
