--- a/views/components/recentJobSlider.ejs
+++ b/views/components/recentJobSlider.ejs
@@ -9,7 +9,7 @@
     }
   </style>
   
-  <h2 class="text-2xl font-bold text-left pl-5 mt-3">Recent Jobs</h2>  
+  <h2 class="text-2xl font-bold text-left pl-9 mt-3">Recent Jobs</h2>  
   
   <div class="w-full overflow-x-auto scroll-hide scroll-smooth bg-gray-100 py-5" id="scrollContainer">
     <div class="flex flex-nowrap gap-5 px-5">
@@ -29,7 +29,7 @@
              class="w-[300px] sm:w-[400px] md:w-[500px] lg:w-[600px] min-w-[250px] rounded-lg overflow-hidden flex-shrink-0 p-4 transition-transform duration-300 cursor-pointer">
               
               <div class="flex items-center gap-3">
-                  <img src="/images/" alt="Profile" class="w-10 h-10 rounded-full object-cover">
+                  <img src="/icons/man.png" alt="Profile" class="w-10 h-10 rounded-full object-cover">
                   <div>
                       <h3 class="text-sm font-bold"><%= post.username %></h3>
                       <p class="text-xs text-gray-500"><%= post.name %> | Full Stack Developer</p>
