--- a/views/components/hero.ejs
+++ b/views/components/hero.ejs
@@ -40,11 +40,10 @@
 
       <div class="relative z-10 text-left mx-auto px-4">
         <h1 class="text-5xl text-stone-50 md:text-6xl font-bold mb-6">
-          Empower Your<br />Software Journey.
-          <span class="text-xl"> <br>The Future of IT Freelancing.</span>
+          The Future of  <br /> IT Freelancing.
         </h1>
         <p class="text-lg text-white md:text-xl mb-8">
-          Join a thriving community of IT professionals. Build teams, collaborate on projects,
+          Join a thriving community of IT professionals. Build teams, collaborate on projects, 
            and grow your freelancing career like never before.
         </p>
         <button
