--- a/views/components/findTalents.ejs
+++ b/views/components/findTalents.ejs
@@ -10,13 +10,17 @@
   </head>
   <body class="bg-white font-roboto">
     <div class="relative w-full h-screen max-w-6xl mx-auto">
-        <img
-        alt="A close-up of a laptop with code on the screen and a person's hand on the keyboard"
-        class="absolute inset-0 w-full h-full object-cover rounded-3xl filter brightness-50"
-        height="1080"
-        src="/images/find-talent.jpg"
-        width="1920"
-      />
+      <video
+      class="absolute inset-0 w-full h-full object-cover rounded-3xl filter brightness-50"
+      autoplay
+      muted
+      loop
+      playsinline
+    >
+      <source src="https://videos.pexels.com/video-files/4974883/4974883-hd_1920_1080_25fps.mp4" type="video/mp4" />
+      <source src="/videos/find-talent.webm" type="video/webm" />
+      Your browser does not support the video tag.
+    </video>
       
       <!-- <div class="absolute inset-0 bg-black opacity-50"></div> -->
       <div class="relative z-10 flex flex-col items-start justify-center h-full px-8 md:px-16 lg:px-32">
