--- a/views/components/workGameSection.ejs
+++ b/views/components/workGameSection.ejs
@@ -1,6 +1,6 @@
 <!-- Work Game Section -->
 <section class="text-center pt-16 pb-2 bg-white">
-    <h2 class="text-center text-violet-800 font-bold text-3xl sm:text-4xl md:text-5xl mb-5 sm:mb-12">
+    <h2 class="text-center text-black font-bold text-3xl sm:text-4xl md:text-5xl mb-5 sm:mb-12">
         Level Up Your Freelance Career - Effortlessly
       </h2>
   
