Post Jobs Sections Added

--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -18,8 +18,8 @@
           <input type="text" placeholder="Search for jobs, projects..." class="w-72 px-3 py-2 border border-black rounded-full outline-none" />
         </div>
         <ul class="hidden lg:flex space-x-6">
-          <li><a href="#" class="text-gray-800 hover:text-violet-700 transition">Home</a></li>
-          <li><a href="#" class="text-gray-800 hover:text-violet-700 transition">Post Jobs</a></li>
+          <li><a href="/" class="text-gray-800 hover:text-violet-700 transition">Home</a></li>
+          <li><a href="/post-jobs" class="text-gray-800 hover:text-violet-700 transition">Post Jobs</a></li>
           <li><a href="#" class="text-gray-800 hover:text-violet-700 transition">Browse Projects</a></li>
           <li><a href="#" class="text-gray-800 hover:text-violet-700 transition">HTS Source</a></li>
           <li>
@@ -34,8 +34,8 @@
         <div class="p-6 flex flex-col h-full">
           <button id="close-menu" class="text-3xl mb-4 cursor-pointer text-right">&times;</button>
           <ul class="space-y-4 flex-grow">
-            <li><a href="#" class="text-gray-800 hover:text-violet-700 transition">Home</a></li>
-            <li><a href="#" class="text-gray-800 hover:text-violet-700 transition">Post Jobs</a></li>
+            <li><a href="/" class="text-gray-800 hover:text-violet-700 transition">Home</a></li>
+            <li><a href="/post-jobs" class="text-gray-800 hover:text-violet-700 transition">Post Jobs</a></li>
             <li><a href="#" class="text-gray-800 hover:text-violet-700 transition">Browse Projects</a></li>
             <li><a href="#" class="text-gray-800 hover:text-violet-700 transition">HTS Source</a></li>
             <li>
