--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -4,11 +4,13 @@
       class="flex flex-col md:flex-row justify-between items-center text-center md:text-left"
     >
       <div class="flex items-center mb-6 md:mb-0">
-        <img
+        <a href="/">
+          <img
           alt="Company Logo"
           class="mr-4 w-[9rem] h-14"
           src="/images/logo/skynux-logo.png"
         />
+        </a>
         <div>
           <h1 class="text-xl font-bold uppercase">Future of freelancing</h1>
           <!-- <p class="text-sm">AN IT FREELANCING PLATFORM</p> -->
