--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -12,8 +12,11 @@
       <nav class="flex justify-between items-center px-6 py-4 max-w-6xl mx-auto">
         <div class="text-3xl cursor-pointer lg:hidden" id="menu-toggle">&#9776;</div>
         <div class="lg:flex lg:items-center lg:space-x-3 lg:relative absolute left-1/2 transform -translate-x-1/2 lg:left-0 lg:translate-x-0">
-          <img src="/images/logo/skynux-logo.png" alt="Logo" class="w-[9rem] h-12 object-cover" />
+          <a href="/" class="block">
+            <img src="/images/logo/skynux-logo.png" alt="Logo" class="w-[9rem] h-12 object-cover" />
+          </a>
         </div>
+        
         <div class="hidden lg:flex flex-1 justify-center">
           <input type="text" placeholder="Search for jobs, projects..." class="w-72 px-3 py-2 border border-black rounded-full outline-none" />
         </div>
