--- a/views/components/post-jobs/postButton.ejs
+++ b/views/components/post-jobs/postButton.ejs
@@ -8,7 +8,7 @@
             <img 
                 alt="A person in a hoodie looking down at a laptop with a gradient background" 
                 class="w-full h-[300px] md:h-[400px] lg:h-[500px] object-cover rounded-[16px]" 
-                src="https://storage.googleapis.com/a1aa/image/K65LOCiKBhHWGnm3WtMB-Uq8hsNl10QG_oR0RjLIn4E.jpg"
+                src="images/post-button.jpg"
             />
             <div class="absolute top-1/2 right-4 md:right-8 transform -translate-y-1/2">
                 <button class="bg-white text-black font-bold py-4 px-8 text-lg md:text-2xl rounded-full shadow-lg hover:bg-slate-200">
