--- a/views/components/post-jobs/post.ejs
+++ b/views/components/post-jobs/post.ejs
@@ -20,21 +20,22 @@
     </div>
     
     <div class="bg-white py-12">
-        <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center space-y-6 md:space-y-0 md:space-x-6">
-            <div class="bg-gray-800 text-white text-center px-16 py-2 rounded-[50px] md:w-1/3 flex flex-col space-y-0 p-2">
+        <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center md:space-x-6">
+            <div class="bg-gray-800 text-white text-center px-12 py-6 rounded-[50px] w-full md:w-1/3 flex flex-col">
                 <h2 class="text-[10rem] font-bold leading-none counter" data-target="50">0+</h2>
                 <p class="text-lg">Peoples posted job</p>
             </div>
-            <div class="bg-blue-900 text-white text-center px-16 py-2 rounded-[50px] md:w-1/3 flex flex-col space-y-0 p-2">
+            <div class="bg-blue-900 text-white text-center px-12 py-6 rounded-[50px] w-full md:w-1/3 flex flex-col">
                 <h2 class="text-[10rem] font-bold leading-none counter" data-target="80">0+</h2>
                 <p class="text-lg">People Projects Done</p>
             </div>
-            <div class="bg-gray-800 text-white text-center px-16 py-2 rounded-[50px] md:w-1/3 flex flex-col space-y-0 p-2">
+            <div class="bg-gray-800 text-white text-center px-10 py-6 rounded-[50px] w-full md:w-1/3 flex flex-col">
                 <h2 class="text-[10rem] font-bold leading-none counter" data-target="30">0+</h2>
                 <p class="text-lg">Willing to post job</p>
             </div>
         </div>
     </div>
+    
 
     <script>
         function animateCounter(element, target) {
